# three_d_data_manager

./: .gitignore  README.md  example_usage.py  requirements.txt  setup.cfg  setup.py  test.py  vis_sequence.py
source/: __init__.py  data_creators.py  dataset.py  file_paths.py
source/data_creators/: __init__.py  convex_mesh_data_creator.py  data_creator_base.py  dicom_data_creator.py  h5_data_creator.py  lbos_data_creator.py  mesh_data_creator.py  mesh_data_creator_base.py  smooth_lbo_mesh_data_creator.py  smooth_voxels_mask_data_creator.py  three_d_arr_data_creator_base.py  three_d_vis_data_creator.py  two_d_vis_data_creator.py  voxelized_mesh_data_creator.py  xyz_arr_data_creator.py  xyz_voxels_mask_data_creator.py  zxy_voxels_mask_data_creator.py
source/process_args/: __init__.py  lbo_creation_args.py  mesh_smoothing_creation_args.py  process_args.py  smooth_mesh_creation_args.py  three_d_vis_creation_args.py
source/utils/: LBO_utils.py  dicom_utils.py  mesh_3d_visualization_utils.py  mesh_utils.py  os_utils.py  sections_2d_visualization_utils.py  visualisation_utils.py  visualization_utils.py  voxels_mesh_conversions_utils.py  voxels_utils.py
three_d_data_manager/: __init__.py
three_d_data_manager/src/: dataset.py  file_paths.py
three_d_data_manager/src/creation_args/: h5_dataset_creation_args.py  lbo_creation_args.py  point_cloud_creation_args.py  vertex_normals_creation_args.py  voxelizing_creation_args.py
three_d_data_manager/src/data_creators/: convex_mesh_data_creator.py  data_creator_base.py  dicom_data_creator.py  h5_data_creator.py  (+14 more)
(+15 files in other folders)
