[metadata]
name = three_d_data_manager
author = Shahar Zuler
author_email = shahar.zuler@gmail.com
url = https://github.com/shaharzuler/three_d_data_manager
description = This package manages and pcocesses 3D data
version = 0.1.0

[options]
package_dir =
    = source
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = source
